feat: implement 'add', 'delete' and 'toggle' functions

--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     gap: 20px;
     justify-content: space-between;
+    margin-bottom: 30px;
   }
 
   &__addInput {
@@ -33,7 +34,7 @@
 
   &__addBtn {
     display: block;
-    width: 180px;
+    width: 120px;
     padding: 10px;
     border-radius: 10px;
     background-color: #1ac31a;
