--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -17,7 +17,7 @@
 
   &__btnBlock {
     display: flex;
-    gap: 10px;
+    gap: 15px;
   }
 
   &__btn {
@@ -35,7 +35,7 @@
   }
 
   @media (max-width: 500px) {
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
 
     &__task {
@@ -43,7 +43,8 @@
     }
 
     &__btnBlock {
-      gap: 20px;
+      margin: 0 auto;
+      gap: 50px;
     }
   }
 }
