--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -15,6 +15,28 @@
     font-weight: 600;
   }
 
+  &__changeInput {
+    display: block;
+    flex-grow: 1;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__changeBtn {
+    border-radius: 10px;
+    background-color: #ff3d3d;
+    padding: 9px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 100%;
+    color: #ffffff;
+  }
+
   &__btnBlock {
     display: flex;
     gap: 15px;
